--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h2>Enjoy highlights from Europe's Top Leagues</h2>
         <nav>
             <ul>
-                <li><a href="#ucl">Champions League</a></li>
-                <li><a href="#epl">Premier League</a></li>
-                <li><a href="#laliga">Laliga</a></li>
-                <li><a href="#serieA">serie A</a></li>
-                <li><a href="#bundlga">Bundesliga</a></li>
-                <li><a href="#ligue-1">Ligue-1</a></li>
-                <li><a href="#efl">EFL Cup</a></li>
+                <li class="ucl-li"><a href="#ucl">Champions League</a></li>
+                <li class="epl-li"><a href="#epl">Premier League</a></li>
+                <li class="laliga-li"><a href="#laliga">Laliga</a></li>
+                <li class="serieA-li"><a href="#serieA">serie A</a></li>
+                <li class="bundliga-li"><a href="#bundlga">Bundesliga</a></li>
+                <li class="ligue-1-li"><a href="#ligue-1">Ligue-1</a></li>
+                <li class="efl-li"><a href="#efl">EFL Cup</a></li>
             </ul>
         </nav>
     </header>
