--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="epl-li"><a href="#epl">Premier League</a></li>
                 <li class="laliga-li"><a href="#laliga">Laliga</a></li>
                 <li class="serieA-li"><a href="#serieA">serie A</a></li>
-                <li class="bundliga-li"><a href="#bundlga">Bundesliga</a></li>
+                <li class="bundlga-li"><a href="#bundlga">Bundesliga</a></li>
                 <li class="ligue-1-li"><a href="#ligue-1">Ligue-1</a></li>
                 <li class="efl-li"><a href="#efl">EFL Cup</a></li>
             </ul>
