--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="epl-li"><a href="#epl">Premier League</a></li>
                 <li class="laliga-li"><a href="#laliga">Laliga</a></li>
                 <li class="serieA-li"><a href="#serieA">serie A</a></li>
-                <li class="bundlga-li"><a href="#bundlga">Bundesliga</a></li>
+                <li class="bundliga-li"><a href="#bundlga">Bundesliga</a></li>
                 <li class="ligue-1-li"><a href="#ligue-1">Ligue-1</a></li>
                 <li class="efl-li"><a href="#efl">EFL Cup</a></li>
             </ul>
@@ -36,8 +36,8 @@
     <div class="container serieA"></div>
     <!-- <img src="./uel.png"  id="uel">
     <div class="container uel"></div> -->
-    <img src="./ligue-1.png" alt="">
-    <div class="container ligue-1" id="ligue-1"></div>
+    <img src="./ligue-1.png" alt="" id="ligue-1">
+    <div class="container ligue-1" ></div>
     <img src="./efl.png"  id="efl">
     <div class="container efl"></div>
 
