--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="ucl-li"><a href="#ucl">Champions League</a></li>
                 <li class="epl-li"><a href="#epl">Premier League</a></li>
-                <li class="laliga-li"><a href="#laliga">Laliga</a></li>
+                <li class="laliga-li"><a href="#laliga">LaLiga</a></li>
                 <li class="serieA-li"><a href="#serieA">Serie A</a></li>
                 <li class="bundliga-li"><a href="#bundlga">Bundesliga</a></li>
                 <li class="ligue-1-li"><a href="#ligue-1">Ligue-1</a></li>
